# Daily-Git-Brief

./: .env.example  .gitignore  README.md  podman-compose.yml
.github/workflows/: ghcr.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  main.rs  models.rs
backend/src/api/: handlers.rs
backend/src/services/: collector.rs  github.rs  llm.rs  mod.rs  oss_insight.rs
frontend/: Dockerfile  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/languages/: +page.svelte
